[package]
name = "lastcommit-worker"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
wasm-bindgen = "0.2"
worker = "0.8.3"

[dev-dependencies]
futures = "0.3"
ureq = "2"
